# qrcodec

./: .gitmodules  CMakeLists.txt  README.md  qrcodec.c  qrcodec.h
example/: main.c
